common files and folders to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 /.idea/
+/client/.idea/
+*.DS_Store
+
+# eclipse project file
+.settings/
+.classpath
+.project
+/server/.settings/
+/server/.classpath
+/server/.project
