--- a/server/build.gradle
+++ b/server/build.gradle
@@ -17,9 +17,14 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.projectlombok:lombok:1.18.24'
     implementation 'org.json:json:20220320'
+    implementation 'com.graphql-java:graphql-spring-boot-starter:5.0.2'
+    implementation 'com.graphql-java:graphql-java-tools:5.2.4'
+    annotationProcessor 'com.graphql-java:graphiql-spring-boot-starter:5.0.2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework:spring-webflux'
     testImplementation 'org.springframework.graphql:spring-graphql-test'
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    implementation 'com.graphql-java:graphql-java:19.1'
 }
 
 tasks.named('test') {
