--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,8 +1,5 @@
-spring.data.cassandra.schema-action=CREATE_IF_NOT_EXISTS
-spring.data.cassandra.request.timeout=10s
-spring.data.cassandra.connection.connect-timeout=10s
-spring.data.cassandra.connection.init-query-timeout=10s
-spring.data.cassandra.local-datacenter=datacenter1
-spring.data.cassandra.keyspace-name=crypto
-spring.datasource.url=jdbc:cassandra://172.17.0.2:9042/crypto
-spring.datasource.driverClassName=org.springframework.jdbc.datasource.DriverManagerDataSource
+spring.data.mongodb.uri=${MONGODB_URI}
+spring.data.mongodb.database=crypto
+spring.graphql.path=/graphql
+spring.graphql.graphiql.path=/graphiql
+spring.graphql.graphiql.enabled=true
