--- a/server/build.gradle
+++ b/server/build.gradle
@@ -22,6 +22,7 @@ dependencies {
 
     implementation 'com.graphql-java:graphql-spring-boot-starter:5.0.2'
     implementation 'com.graphql-java:graphql-java-tools:5.2.4'
+    implementation 'org.springframework.boot:spring-boot-devtools:2.7.3'
     annotationProcessor 'com.graphql-java:graphiql-spring-boot-starter:5.0.2'
 //    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.3'
 //    testImplementation 'org.springframework:spring-webflux:5.3.22'
