Allow queries from localhost

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.data.mongodb.database=crypto
 spring.graphql.path=/graphql
 spring.graphql.graphiql.path=/graphiql
 spring.graphql.graphiql.enabled=true
+spring.graphql.cors.allowed-origins=http://localhost:3000/, http://localhost:8080
