--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,6 +1,16 @@
-spring.data.mongodb.uri=${MONGODB_URI}
-spring.data.mongodb.database=crypto
+#spring.data.mongodb.uri=${MONGODB_URI}
+#spring.data.mongodb.database=crypto
 spring.graphql.path=/graphql
 spring.graphql.graphiql.path=/graphiql
 spring.graphql.graphiql.enabled=true
 spring.graphql.cors.allowed-origins=http://localhost:3000/, http://localhost:8080
+#spring.datasource.url=jdbc:derby:memory:local;create=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=h2
+spring.datasource.password=password
+#spring.datasource.url=jdbc:derby:directory:mydbdirectory;create=true
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.DerbyTenSevenDialect
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
