--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
+    "chartjs-plugin-datalabels": "^2.1.0",
+    "numeral": "^2.0.6",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.6.4",
     "react-chartjs-2": "^4.3.1",
